--- a/TheFlasherR/android/app/src/main/AndroidManifest.xml
+++ b/TheFlasherR/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
   package="com.theflasherr">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
       android:name=".MainApplication"
@@ -10,6 +12,10 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDKkRskdtkYpVIHurAGrlA23eCXiAYna_Q" />
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
